log
Sun 30 Mar 2025 12:38:16 AM UTC: 
 tests:  0|6
total_score: 0/70
25021aa
Sun 30 Mar 2025 12:39:35 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:12: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |      List *lista = createList();
      |            ^~~~~
list.c:31:8: error: infinite recursion detected [-Werror=infinite-recursion]
   31 | List * createList() {
      |        ^~~~~~~~~~
list.c:32:20: note: recursive call
   32 |      List *lista = createList();
      |                    ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2041c37
Sun 30 Mar 2025 12:39:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:12: error: unused variable ‘L’ [-Werror=unused-variable]
   32 |      List *L = createList();
      |            ^
list.c:31:8: error: infinite recursion detected [-Werror=infinite-recursion]
   31 | List * createList() {
      |        ^~~~~~~~~~
list.c:32:16: note: recursive call
   32 |      List *L = createList();
      |                ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9b5f587
Sun 30 Mar 2025 12:42:56 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4b6cd4
Sun 30 Mar 2025 12:47:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:24: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   40 |     return list->head->dato;
      |                        ^~~~
      |                        data
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
89cf684
Sun 30 Mar 2025 12:47:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9ff88cb
Sun 30 Mar 2025 12:47:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d13fd7b
Sun 30 Mar 2025 12:49:25 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:5: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   43 |     lista->current = lista->head;
      |     ^~~~~
      |     list
list.c:43:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
feaa62c
Sun 30 Mar 2025 12:49:39 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:5: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   43 |     lista->current = lista->head;
      |     ^~~~~
      |     list
list.c:43:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a8f43f
Sun 30 Mar 2025 12:49:50 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
67a0895
Sun 30 Mar 2025 12:50:25 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
e9f9d1f
Sun 30 Mar 2025 12:50:46 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:12: error: expected expression before ‘int’
   46 |     return int(list->head);
      |            ^~~
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d677020
Sun 30 Mar 2025 12:51:50 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:22: error: invalid operands to binary == (have ‘Node’ and ‘void *’)
   42 |     if(*(list->head) == NULL)
      |        ~~~~~~~~~~~~~ ^~
      |        |
      |        Node
list.c:46:12: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   46 |     return *(list->head);
      |            ^~~~~~~~~~~~~
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5ab6c00
Sun 30 Mar 2025 12:52:29 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:24: error: ‘Node’ has no member named ‘date’; did you mean ‘data’?
   46 |     return list->head->date;
      |                        ^~~~
      |                        data
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1207fab
Sun 30 Mar 2025 12:52:35 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b271f36
Sun 30 Mar 2025 12:56:16 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
07b486f
Sun 30 Mar 2025 12:58:16 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
a89b5be
Sun 30 Mar 2025 12:59:09 AM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
list.c:81:1: error: expected identifier or ‘(’ before ‘}’ token
   81 | }
      | ^
Compilation failed
647449d
Sun 30 Mar 2025 12:59:21 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c:81:5: error: expected identifier or ‘(’ before ‘}’ token
   81 |     }
      |     ^
list.c:82:1: error: expected identifier or ‘(’ before ‘}’ token
   82 | }
      | ^
Compilation failed
659be21
Sun 30 Mar 2025 12:59:33 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|4
total_score: 25/70
c1708c8
